fixed header alignment

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6449,7 +6449,7 @@ a.btn-flat:hover{
     background: rgba(61, 190, 238, 0.7); }
 
 .mr_head {
-  text-align: cemrnter;
+  text-align: center;
   width: 780px;
   overflow: auto;
   margin-top: 20px;
